--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next-themes": "^0.4.4",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@types/node": "^20",
